Closed Bug 672450 Opened 13 years ago Closed 13 years ago

C4233/C4267 warning for jsobj.h, vm/String.h and jsatom.h

Categories

(Core :: JavaScript Engine, defect)

x86_64
Windows Vista
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla8

People

(Reporter: m_kato, Assigned: m_kato)

Details

(Whiteboard: [inbound])

Attachments

(1 file)

there is a lot of warning when including js header.

C:\Workspace\hg.mozilla.org\mozilla-win64\js\src\jsobj.h(597) : warning C4244: 'return' : conversion from 'const jsuword' to 'uint32', possible loss of data
c:\workspace\hg.mozilla.org\mozilla-win64\js\src\vm/String.h(586) : warning C4267: 'return' : conversion from 'size_t' to 'intN', possible loss of data
c:\workspace\hg.mozilla.org\mozilla-win64\js\src\jsatom.h(118) : warning C4267: 'return' : conversion from 'size_t' to 'js::HashNumber', possible loss of data
Attached patch fixSplinter Review
Attachment #546720 - Flags: review?(luke)
Attachment #546720 - Flags: review?(luke) → review+
http://hg.mozilla.org/integration/mozilla-inbound/rev/b2e3241c7f04
Whiteboard: [inbound]
http://hg.mozilla.org/mozilla-central/rev/b2e3241c7f04
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla8
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: