Bug 672450 - C4233/C4267 warning for jsobj.h, vm/String.h and jsatom.h. r=luke